another try at fixing footer on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html, body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -96,6 +96,11 @@ nav a.active {
   padding: .25rem;
 }
 
+#footer p {
+  margin: 0;
+  font-size: 0.80rem;
+}
+
 #map {
   height: 225px;
   width: 100%; 
@@ -162,6 +167,10 @@ nav a.active {
     font-size: 18px;
     padding: 20px;
   }
+
+  #footer p {
+    font-size: 1rem;
+  }
 }
 
 /* Small laptops and large tablets: 768px and up */
@@ -218,5 +227,9 @@ nav a.active {
 
   #map-section, #form-section, #reports-section {
     width: 25%;
+  }
+
+  #footer p {
+    font-size: 1.33rem;
   }
 }
